added content, commented out JS

--- a/admin-lang.html
+++ b/admin-lang.html
@@ -111,7 +111,7 @@
 
 
 
-                        <div class="left-form col-xs-12">
+                        <div class="left-form norpadding col-xs-12">
                             <table class="table">
                                 <thead>
                                     <tr>
