--- a/admin-lang.html
+++ b/admin-lang.html
@@ -10,14 +10,11 @@
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
 
-    <title>Zanata - Languages: Zanata_Server</title>
+    <title>Zanata - Languages</title>
 
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
-
-    <!-- Load c3.css -->
-
 
     <!-- Custom styles for this template -->
     <link href="style.css" rel="stylesheet">
@@ -27,7 +24,8 @@
 
 <body>
 
-    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <svg style="position: absolute; width: 0; height:0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink">
         <defs>
             <symbol id="icon-Icon-zanata" viewBox="0 0 32 32">
                 <title>Icon-zanata</title>
@@ -43,75 +41,99 @@
 
 
                 <div class="contentx clearfix col-height col-xs-12 col-sm-9 col-md-11 col-sm-push-2 col-md-push-1">
-                  <h2>Languages</h2>
-                  <div class="col-xs-12">
+                    <h2>Languages <span class="badge">135</span></h2>
+                    <div class="col-xs-12">
+                        <button class="btn btn-primary" type="button"><i class="fa fa-plus"></i> Add new language</button>
 
-                    <div class="left-form toolbar col-xs-12" role="toolbar">
-                                                  <div class="search-box col-xs-6 col-sm-8 col-md-5 col-lg-4">
-                                                      <div class="input-group">
-                                                          <input type="text" class="form-control" placeholder="Search for...">
-                                                          <span class="input-group-btn">
+                        <div class="left-form toolbar col-xs-12" role="toolbar">
+                            <div class="search-box col-xs-6 col-sm-7 col-md-5 col-lg-2">
+                                <div class="input-group">
+                                    <input type="text" class="form-control" placeholder="Search languages">
+                                    <span class="input-group-btn">
                                     <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
                                     </span>
-                                                      </div>
-                                                      <!-- /input-group -->
-                                                  </div>
-                                                  <!-- /.col-lg-6 -->
+                                </div>
+                                <!-- /input-group -->
+                            </div>
+                            <!-- /.col-lg-6 -->
 
-                                                  <div class="sort-items col-xs-3-pull-right col-sm-3-pull-right col-md-2">
-                                                      <select class="pull-right" id="ddlList1">
-                                                          <option value="2">Alphabetical</option>
-                                                          <option value="1">Last source update</option>
-                                                      </select>
+                            <div class="sort-items col-xs-3-pull-right col-sm-3-pull-right col-md-2">
+                                <select class="pull-right" id="ddlList1">
+                                    <option value="2">Alphabetical</option>
+                                    <option value="1">Locale code</option>
+                                    <option value="3">Members</option>
+                                </select>
 
-                                                  </div>
-                                                  <!-- /.col-lg-6 -->
+                            </div>
+                            <!-- /.col-lg-6 -->
 
-                                                  <div class="show-items col-xs-3 col-sm-3 col-md-2 col-lg-2" style="
-                          ">
-                                                      <span>Show</span>
-                                                      <select id="ddlList2">
-                                                        <option value="4">100</option>
-                                                            <option value="1">10</option>
-                                                            <option value="2">20</option>
-
-                                                          <option value="3">50</option>
-
-
-                                                      </select>
+                            <div class="show-items col-xs-3 col-sm-3 col-md-2 col-lg-2">
+                                <span>Show</span>
+                                <select id="ddlList2">
+                                  <option value="1">10</option>
+                                    <option value="2">20</option>
+                                    <option value="3">50</option>
+                                    <option value="4">100</option>
 
 
-                                                  </div>
-                                                  <!-- /.col-lg-6 -->
-                                                  <div class="page-count pull-right col-xs-8 col-sm-8 col-md-3 col-lg-3">
-                                                      <nav aria-label="...">
-                                                          <ul class="pagination pull-right">
-                                                              <li class="disabled">
-                                                                  <span>
+
+                                </select>
+
+
+                            </div>
+                            <!-- /.col-lg-6 -->
+                            <div class="page-count pull-right col-xs-8 col-sm-8 col-md-3 col-lg-5">
+                                <nav>
+                                    <ul class="pagination pull-right">
+                                        <li class="disabled">
+                                            <span>
                                     <span aria-hidden="true">«</span>
-                                                                  </span>
-                                                              </li>
-                                                              <li class="active">
-                                                                  <span>1 <span class="sr-only">(current)</span></span>
-                                                              </li>
-                                                              <li><a href="#">2 <span class="sr-only"></span></a>
-                                                              </li>
+                                            </span>
+                                        </li>
+                                        <li class="active">
+                                            <span>1 <span class="sr-only">(current)</span></span>
+                                        </li>
+                                        <li><a href="#">2 <span class="sr-only"></span></a>
+                                        </li>
 
-                                                              <li><a href="#">3 <span class="sr-only"></span></a>
-                                                              </li>
-                                                              <li>
-                                                                  <a href="#" aria-label="Next">
-                                                                      <span aria-hidden="true">»</span>
-                                                                  </a>
-                                                              </li>
-                                                          </ul>
-                                                      </nav>
-                                                  </div>
-                                              </div>
+                                        <li><a href="#">3 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">4 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">5 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">6 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">7 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">8 <span class="sr-only"></span></a>
+                                        </li>
+
+                                        <li><a href="#">9 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">10 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">11 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">12 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">13 <span class="sr-only"></span></a>
+                                        </li>
+                                        <li><a href="#">14<span class="sr-only"></span></a>
+                                        </li>
+                                        <li>
+                                            <a href="#" aria-label="Next">
+                                                <span aria-hidden="true">»</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </nav>
+                            </div>
+                        </div>
 
 
 
-                        <div class="left-form norpadding col-xs-12">
+                        <div class="left-form tablepadding col-xs-12">
                             <table class="table">
                                 <thead>
                                     <tr>
@@ -121,20 +143,84 @@
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><a href="assam-docs.html">Afrikaans</a><br />
-                                          af[Afrikaans]
+                                        <td><span class="caret">&nbsp;</span><a href="">Afrikaans <span class="greentext badge">DEFAULT</span></a>
+                                            <br /><span class="langcode"> af [Afrikaans]</span>
+                                        </td>
+                                        <td><span><i class="fa fa-user"></i>0</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="caret">&nbsp;</span><a href="">Albanian</a>
+                                            <br /><span class="langcode"> sq [shqip]</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>2</span>
                                         </td>
-
                                     </tr>
+                                    <tr>
+                                        <td><span class="caret">&nbsp;</span><a href="">Amharic</a>
+                                            <br /><span class="langcode"> am</span>
+                                        </td>
+                                        <td><span><i class="fa fa-user"></i>4</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="caret">&nbsp;</span><a href="">Angika</a>
+                                            <br /><span class="langcode"> anp [Angika]</span>
+                                        </td>
+                                        <td><span><i class="fa fa-user"></i>1</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="caret">&nbsp;</span><a href="">Arabic</a>
+                                            <br /><span class="langcode"> ar</span>
+                                        </td>
+                                        <td><span><i class="fa fa-user"></i>5</span>
+                                        </td>
+                                    </tr>
+
+                                    <tr>
+                                        <td><span class="caret">&nbsp;</span><a href="">Arabic (Saudi Arabia) <span class="dis badge">DISABLED</span></a>
+                                            <br /><span class="langcode"> ar-SA</span>
+                                        </td>
+                                        <td><span><i class="fa fa-user"></i>0</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="caret">&nbsp;</span><a href="">Armenian</a>
+                                            <br /><span class="langcode"> hy</span>
+                                        </td>
+                                        <td><span><i class="fa fa-user"></i>1</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="caret">&nbsp;</span><a href="">Assamese</a>
+                                            <br /><span class="langcode"> as</span>
+                                        </td>
+                                        <td><span><i class="fa fa-user"></i>8</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="caret">&nbsp;</span><a href="">Assamese (India) <span class="dis badge">DISABLED</span></a>
+                                            <br /><span class="langcode"> anp [Angika]</span>
+                                        </td>
+                                        <td><span><i class="fa fa-user"></i>1</span>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td><span class="caret">&nbsp;</span><a href="">Arabic</a>
+                                            <br /><span class="langcode"> ar</span>
+                                        </td>
+                                        <td><span><i class="fa fa-user"></i>5</span>
+                                        </td>
+                                    </tr>
+
 
 
                                 </tbody>
                             </table>
                         </div>
-          </div>
-        </div>
+                    </div>
+                </div>
 
 
 
@@ -180,11 +266,11 @@
                 </div>
             </div>
         </div>
-      </div>
+    </div>
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-  <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script>
         window.jQuery || document.write(
             '<script src="assets/js/vendor/jquery.min.js"><\/script>'
