delete button added and carets removed

--- a/admin-lang.html
+++ b/admin-lang.html
@@ -53,7 +53,9 @@
                                     <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
                                     </span>
                                 </div>
+                                <!-- /input-group -->
                             </div>
+                            <!-- /.col-lg-6 -->
 
                             <div class="sort-items col-xs-3-pull-right col-sm-3-pull-right col-md-2">
                                 <select class="pull-right" id="ddlList1">
@@ -61,8 +63,10 @@
                                     <option value="1">Locale code</option>
                                     <option value="3">Members</option>
                                 </select>
+
                             </div>
-                            
+                            <!-- /.col-lg-6 -->
+
                             <div class="show-items col-xs-3 col-sm-3 col-md-2 col-lg-2">
                                 <span>Show</span>
                                 <select id="ddlList2">
@@ -70,9 +74,14 @@
                                     <option value="2">20</option>
                                     <option value="3">50</option>
                                     <option value="4">100</option>
+
+
+
                                 </select>
+
+
                             </div>
-                            
+                            <!-- /.col-lg-6 -->
                             <div class="page-count pull-right col-xs-8 col-sm-8 col-md-3 col-lg-5">
                                 <nav>
                                     <ul class="pagination pull-right">
@@ -99,6 +108,7 @@
                                         </li>
                                         <li><a href="#">8 <span class="sr-only"></span></a>
                                         </li>
+
                                         <li><a href="#">9 <span class="sr-only"></span></a>
                                         </li>
                                         <li><a href="#">10 <span class="sr-only"></span></a>
@@ -129,79 +139,110 @@
                                     <tr>
                                         <th>Language</th>
                                         <th>&nbsp;</th>
+                                                <th>&nbsp;</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Afrikaans <span class="greentext badge">DEFAULT</span></a>
+                                        <td><a href="">Afrikaans <span class="greentext badge">DEFAULT</span></a>
                                             <br /><span class="langcode"> af [Afrikaans]</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>0</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Albanian</a>
+                                        <td><a href="">Albanian</a>
                                             <br /><span class="langcode"> sq [shqip]</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>2</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Amharic</a>
+                                        <td><a href="">Amharic</a>
                                             <br /><span class="langcode"> am</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>4</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Angika</a>
+                                        <td><a href="">Angika</a>
                                             <br /><span class="langcode"> anp [Angika]</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>1</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Arabic</a>
+                                        <td><a href="">Arabic</a>
                                             <br /><span class="langcode"> ar</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>5</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
 
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Arabic (Saudi Arabia) <span class="dis badge">DISABLED</span></a>
+                                        <td><a href="">Arabic (Saudi Arabia) <span class="dis badge">DISABLED</span></a>
                                             <br /><span class="langcode"> ar-SA</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>0</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Armenian</a>
+                                        <td><a href="">Armenian</a>
                                             <br /><span class="langcode"> hy</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>1</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Assamese</a>
+                                        <td><a href="">Assamese</a>
                                             <br /><span class="langcode"> as</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>8</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Assamese (India) <span class="dis badge">DISABLED</span></a>
+                                        <td><a href="">Assamese (India) <span class="dis badge">DISABLED</span></a>
                                             <br /><span class="langcode"> anp [Angika]</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>1</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
                                     <tr>
-                                        <td><span class="caret">&nbsp;</span><a href="">Arabic</a>
+                                        <td><a href="">Arabic</a>
                                             <br /><span class="langcode"> ar</span>
                                         </td>
                                         <td><span><i class="fa fa-user"></i>5</span>
                                         </td>
+                                        <td>
+                                        <button type="button" class="btn btn-default btn-sm">Delete</button>
+                                      </td>
                                     </tr>
 
 
