tabs are not aligned to top of settings and versions settings pages, not to the left

--- a/settings.html
+++ b/settings.html
@@ -136,8 +136,8 @@
                         <h2>Project settings</h2>
                         <div class="col-xs-12">
                             <!-- tabs left -->
-                            <div class="tabbable col-xs-12 tabs-left">
-                                <ul class="nav col-xs-2 col-md-3 nav-tabs">
+                            <div class="col-xs-12">
+                                <ul class="nav col-xs-12 nav-tabs">
                                     <li class="active"><a href="#gen" data-toggle="tab"><i class="fa fa-cog"></i><span class="hidden-xs hidden-sm visible-md--+"> General</span></a>
                                     </li>
                                     <li><a href="#lang" data-toggle="tab"><i class="fa fa-globe"></i><span class="hidden-xs hidden-sm visible-md--+"> Languages</span></a>
@@ -156,7 +156,7 @@
                                     <li><a href="#ab" data-toggle="tab"><i class="fa fa-info-circle"></i><span class="hidden-xs hidden-sm  visible-md--+"> About</span></a>
                                     </li>
                                 </ul>
-                                <div class="tab-content col-xs-10 col-md-9 pull-right">
+                                <div class="tab-content col-xs-12">
                                     <div class="tab-pane active" id="gen">
                                         <h3>General</h3>
                                         <div class="col-xs-12">
