--- a/vsettings.html
+++ b/vsettings.html
@@ -137,8 +137,8 @@
                         <div class="col-xs-12">
 
                             <!-- tabs left -->
-                            <div class="tabbable col-xs-12 tabs-left">
-                                <ul class="nav col-xs-2 col-md-3 nav-tabs">
+                            <div class="col-xs-12">
+                                <ul class="nav col-xs-12 nav-tabs">
                                     <li class="active"><a href="#gen" data-toggle="tab"><i class="fa fa-cog"></i><span class="hidden-xs hidden-sm visible-md--+"> General</span></a>
                                     </li>
                                     <li><a href="#docs" data-toggle="tab"><i class="fa fa-file"></i><span class="hidden-xs hidden-sm visible-md--+"> Documents</span></a>
@@ -153,7 +153,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                                <div class="tab-content col-xs-10 col-md-9 pull-right">
+                                <div class="tab-content col-xs-12">
                                     <div class="tab-pane active" id="gen">
                                         <h3>General</h3>
                                         <div class="col-xs-12">
