--- a/style-guide/markup/base/images.html
+++ b/style-guide/markup/base/images.html
@@ -1,7 +1,2 @@
-			<p>
-             	<img src="http://placehold.it/120x100" class="img-rounded">
-             	<img src="http://placehold.it/120x100" class="img-circle">
-             	<img src="http://placehold.it/120x100" class="img-thumbnail">
-             </p>
-             <p>
-             	<img src="http://placehold.it/1200x300" class="img-responsive"></img>
+			<p>All icons need the .fa class added to them</p>
+<pre><i class="fa fa-user"></i> .fa-user</pre>
