tidied layout of style guide

--- a/style-guide/markup/patterns/buttons-advanced.html
+++ b/style-guide/markup/patterns/buttons-advanced.html
@@ -30,10 +30,11 @@
             </div>
         </div>
     </div><!--with dropdown-->
-
-    <h4>With Dropdown</h4>
+<br />
 
     <div class="col-md-12">
+      <h4>With Dropdown</h4>
+
         <div class="btn-group">
             <button type="button" class="btn btn-default">1</button> <button type="button" class="btn btn-default">2</button>
 
@@ -48,10 +49,12 @@
             </div>
         </div>
     </div><!--vertical-->
+    <br />
 
-    <h4>Vertical</h4>
 
     <div class="col-md-12">
+      <h4>Vertical</h4>
+
         <div class="btn-group-vertical">
             <button type="button" class="btn btn-default">Button</button> <button type="button" class="btn btn-default">Button</button>
 
@@ -66,7 +69,7 @@
             </div><button type="button" class="btn btn-default">Button</button>
         </div>
     </div>
-
+<br />
     <div class="col-md-12">
         <!--justified-->
 
@@ -85,11 +88,12 @@
                 <button type="button" class="btn btn-default">Right</button>
             </div>
         </div>
-
-        <h4>Dropdowns</h4>
+      </div>
+<br />
 
         <div class="col-md-12">
             <!-- Split button -->
+            <h4>Dropdowns</h4>
 
             <div class="btn-group">
                 <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Default</button>
@@ -175,7 +179,7 @@
                 </ul>
             </div><!-- /btn-group -->
         </div>
-
+<br />
         <div class="col-md-12">
             <!--split-->
             <div class="btn-group">
@@ -266,7 +270,7 @@
                 </ul>
             </div><!-- /btn-group -->
         </div>
-
+<br />
         <div class="col-md-12">
             <!-- Large button group -->
 
@@ -295,4 +299,3 @@
             </div>
         </div>
     </div>
-
