fixed links to style.css

--- a/mockups/admin-lang.html
+++ b/mockups/admin-lang.html
@@ -17,7 +17,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="../style.css" rel="stylesheet">
 
 
 </head>
@@ -298,39 +298,6 @@
             </div>
         </div>
     </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write(
-            '<script src="assets/js/vendor/jquery.min.js"><\/script>'
-        )
-    </script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-    <script>
-        //, attr, order
-
-        var sortSelect = function(select, attr, order) {
-            if (attr === 'text') {
-                if (order === 'asc') {
-                    $(select).html($(select).children('option').sort(function(x, y) {
-                        return $(x).text().toUpperCase() < $(y).text().toUpperCase() ? -1 : 1;
-                    }));
-                    $(select).get(0).selectedIndex = 0;
-                    e.preventDefault();
-                } // end asc
-                if (order === 'desc') {
-                    $(select).html($(select).children('option').sort(function(y, x) {
-                        return $(x).text().toUpperCase() < $(y).text().toUpperCase() ? -1 : 1;
-                    }));
-                    $(select).get(0).selectedIndex = 0;
-                    e.preventDefault();
-                } // end desc
-            }
-
-        };
-    </script>-->
 </body>
 
 </html>
