--- a/mockups/index.html
+++ b/mockups/index.html
@@ -12,7 +12,7 @@
 
     <title>Zanata - Project: Zanata_Server</title>
 
-    <link href="../dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
 
@@ -308,7 +308,7 @@ Sperm Whale is in some cases sufficiently powerful, knowing,...</strong></a>"</p
             '<script src="assets/js/vendor/jquery.min.js"><\/script>'
         )
     </script>
-    <script src="../dist/js/bootstrap.min.js"></script>
+    <script src="dist/js/bootstrap.min.js"></script>
 
 
 </body>
