--- a/mockups/settings.html
+++ b/mockups/settings.html
@@ -20,7 +20,7 @@
 
 
     <!-- Custom styles for this template -->
-    <link href="style.css" rel="stylesheet">
+    <link href="../style.css" rel="stylesheet">
 
 
 </head>
