primary label added, background colour fixed

--- a/markup/base/labels.html
+++ b/markup/base/labels.html
@@ -5,6 +5,7 @@
     <h5>Example heading <span class="label label-default">New</span></h5>
     <h6>Example heading <span class="label label-default">New</span></h6>
     <span class="label label-default">Default</span>
+    <span class="label label-primary">Primary</span>
     <span class="label label-success">Success</span>
     <span class="label label-info">Info</span>
     <span class="label label-warning">Warning</span>
